UtahLiveDataTest/src/objects/ProgressReportDetail__c.object
<CustomObject>
    <description>[Business] Details of the Grant Progress Report</description>
    <fields>
        <fullName>AmountCharged__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountTotal__c</fullName>
        <label>Amount Total</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseTotal__c</fullName>
        <label>Base Total</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Progress Report Details</relationshipLabel>
        <relationshipName>Progress_Report_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CatName__c</fullName>
        <formula>ReportBudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalShareTotal__c</fullName>
        <label>Federal Share Total</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalShare__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Federal Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PeriodFrom__c</fullName>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodTo__c</fullName>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgressReport__c</fullName>
        <label>Progress Report</label>
        <referenceTo>ProgressReports__c</referenceTo>
        <relationshipLabel>Progress Report Details</relationshipLabel>
        <relationshipName>Progress_Report_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReportBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Budget Category</label>
        <referenceTo>ReportBudgetCategory__c</referenceTo>
        <relationshipLabel>Progress Report Details</relationshipLabel>
        <relationshipName>Progress_Report_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RowNumberFormula__c</fullName>
        <formula>ReportBudgetCategory__r.RowNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>Row Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Progress Report Detail</label>
    <nameField>
        <displayFormat>PRDetail-{0000}</displayFormat>
        <label>Progres Report Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Report Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>